--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,6 +1,7 @@
 .row-header{
     margin:0px auto;
-    padding:0px;
+    padding-top: 40px;
+    padding-bottom:20px;
 }
 
 .row-content {
@@ -32,8 +33,9 @@ address{
 body{
     padding: 50px 0px 0px 0px;
     z-index: 0;
+    background-color:#ffeda7;
 }
 
 .navbar-dark{
-    background-color: #856c08;
+    background-color: #967e1d;
 }
