--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
 .row-header{
     margin:0px auto;
     padding-top: 40px;
@@ -17,11 +19,19 @@
     padding: 20px 0px 20px 0px;
 }
 
-.jumbotron {
+.jumbotron{
     padding:70px 30px 70px 30px;
     margin:0px auto;
-    background: #c4a736 ;
+    background-image: url(../img/jumbotron.png);
     color:floralwhite;
+    background-size: cover;
+    min-height: 640px;
+    font-family: 'Architects Daughter', cursive;
+    font-size: 400%;
+}
+
+h1{
+    font-size: 2em;
 }
 
 address{
@@ -38,4 +48,10 @@ body{
 
 .navbar-dark{
     background-color: #967e1d;
+}
+
+.row-content-design {
+    margin:0px auto;
+    padding: 20px 0px 20px 0px;
+    min-height:200px;
 }
